--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,9 @@ jobs:
         with:
           node-version: "latest"
 
-      - name: Install TypeScript
+      - name: Install Dependencies
         run: |
-          npm install typescript --save-dev @types/node
+          npm install typescript --save-dev @types/node @aws-sdk/client-s3
 
       - name: Compile TypeScript
         run: |
